[project]
name = "wrm_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "boto3",
    "dagster",
    "dagster-aws",
    "dagster-cloud",
    "ftfy",
    "hvac",
    "pandas",
    "requests",
    "tenacity>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "wrm_pipeline.definitions"
code_location_name = "wrm_pipeline"

[tool.setuptools.packages.find]
exclude=["wrm_pipeline_tests"]
